# stream2graph

./: .dockerignore  .env  .env.example  .env.production  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.api  Dockerfile.audio-helper  Dockerfile.web  README.md  docker-compose.ci.yml  docker-compose.yml  docker-entrypoint-api.sh  package.json  pnpm-lock.yaml  requirements-frontend.txt
.cursor/skills/: README.md
.github/workflows/: docker-images.yml
apps/api/: pyproject.toml
apps/audio-helper/: pyproject.toml
apps/audio-helper/audio_helper/: main.py
apps/audio-helper/tests/: test_helper_api.py
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
configs/dialogue_regen/: gemini_3_pro_preview_pilot_suite.json  kimi_code_for_coding_pilot100_fullspeed.json  kimi_code_for_coding_pilot_suite.json  kimi_code_k25_alias_pilot100_fullspeed.json  kimi_code_k25_alias_pilot100_moderate.json  kimi_code_k25_alias_pilot_suite.json  kimi_k25_final_v5_pipeline.json  kimi_k25_parallel_tier1.example.json  minimax_m25_pilot_suite.json  (+10 more)
docs/: PROJECT_COMPLETE_GUIDE_EN.md  PROJECT_COMPLETE_GUIDE_ZH.md  README.md
requirements/: analysis_visualization.txt
scripts/: dev-common.ps1  dev-down.ps1  dev-down.sh  dev-restart.ps1  dev-restart.sh  dev-status.ps1  dev-status.sh  dev-up.ps1  dev-up.sh  generate_icmi_polish_figures.py  generate_localhf_incremental_analysis_assets.py  generate_localhf_incremental_analysis_assets_matplotlib.py
skills/: README.md  SKILL.md  plugin.json
tools/: generate_ai_usage_docx.py  mermaid_prompting.py
(+17533 files in other folders)
