[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stream2graph-audio-helper"
version = "0.1.0"
description = "Local audio helper for Stream2Graph realtime transcription"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "numpy>=1.26,<3.0",
  "faster-whisper>=1.1.0,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["audio_helper*"]
